AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = README basicMakefile

noinst_PROGRAMS = tvguid01 tvguid02 tvguid03 tvguid04 tvguid05 tvguid06 \
tvguid07 tvguid08 tvguid09 tvguid10 tvguid11 tvguid12 tvguid13 tvguid14 \
tvguid15 tvguid16 background listbox load nomenus splash tvedit tvlife  \
validator

tvguid01_SOURCES = tvguid01.cc
tvguid02_SOURCES = tvguid02.cc
tvguid03_SOURCES = tvguid03.cc
tvguid04_SOURCES = tvguid04.cc
tvguid05_SOURCES = tvguid05.cc
tvguid06_SOURCES = tvguid06.cc
tvguid07_SOURCES = tvguid07.cc
tvguid08_SOURCES = tvguid08.cc
tvguid09_SOURCES = tvguid09.cc
tvguid10_SOURCES = tvguid10.cc
tvguid11_SOURCES = tvguid11.cc
tvguid12_SOURCES = tvguid12.cc
tvguid13_SOURCES = tvguid13.cc
tvguid14_SOURCES = tvguid14.cc
tvguid15_SOURCES = tvguid15.cc
tvguid16_SOURCES = tvguid16.cc
background_SOURCES = background.cc
listbox_SOURCES = listbox.cc
load_SOURCES = load.cc
nomenus_SOURCES = nomenus.cc
splash_SOURCES = splash.cc
tvedit_SOURCES = tvedit.cc
tvlife_SOURCES = tvlife.cc
validator_SOURCES = validator.cc

LDADD = ../lib/libtvision.a

INCLUDES = -I../lib
